# kraken-infer

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  compile_flags.txt
apps/: kraken_infer_main.cpp  toyllm_main.cpp
cmake/: ProjectWarnings.cmake
docs/: architecture.md  forward.md  gguf-tokenizer.md  logging-and-profiling.md  milestones.md  mpsgraph-backend.md  mpsgraph-performance.md  qwen3-5-0-8b-image-input-llama-cpp.md  qwen3-5-0-8b-llama-cpp-gap-analysis.md  qwen3-5-0-8b-llama-cpp-ops.md  qwen3-5-0-8b-mtp-llama-cpp.md  qwen3-5-0-8b-openai-thinking.md  qwen3-5-0-8b-technical-plan.md  qwen3-5-cross-request-kv-cache.md
docs/M1/: task.md
docs/M10/: task.md
docs/M11/: task.md
docs/M2/: task.md
docs/M3/: task.md
docs/M4/: task.md
docs/M5/: task.md
docs/M6/: task.md
docs/M7/: task.md
docs/M8/: task.md
docs/M9/: task.md
docs/logging-profile/: task.md
docs/qwen3-0-6-B/: 0-overview.md  1-BPE-tokenizer.md  2-Qwen3-forward.md  3-Transformer-block.md  4-Qwen3-attention.md
include/toyllm/backends/mps/: mps_backend.hpp
include/toyllm/backends/mpsgraph/: mpsgraph_backend.hpp  mpsgraph_kv_cache.hpp  mpsgraph_weight_store.hpp  qwen_mpsgraph_model.hpp
include/toyllm/core/: device.hpp  status.hpp  tensor.hpp
include/toyllm/model/: model_config.hpp
include/toyllm/runtime/: chat_message.hpp  cpu_inference.hpp  gguf_reader.hpp  gguf_tokenizer.hpp  llama_cpp_bridge.hpp  mpsgraph_inference.hpp  openai_gateway.hpp  profiling.hpp  qwen35_multimodal.hpp  qwen35_prefix_cache.hpp  qwen35_runtime.hpp  qwen35_vl_adapter.hpp  qwen35_weight_map.hpp  qwen_tokenizer.hpp  reasoning_parser.hpp  runtime.hpp
models/: README.md
models/qwen3-0.6b/: README.md
scripts/: compare_cpu_transformers.py  compare_qwen35_llamacpp.py  sweep_qwen35_mtp.py  test_qwen35_mtp_gateway.py  test_qwen35_vl_gateway.py
src/backends/mps/: mps_backend.mm  mps_backend_stub.cpp
src/backends/mpsgraph/: mpsgraph_backend.mm  mpsgraph_backend_stub.cpp  mpsgraph_kv_cache.cpp  mpsgraph_weight_store.cpp  qwen_mpsgraph_model.cpp
src/core/: status.cpp  tensor.cpp
src/model/: model_config.cpp
src/runtime/: cpu_inference.cpp  gguf_reader.cpp  gguf_tokenizer.cpp  llama_cpp_bridge.cpp  mpsgraph_inference.cpp  openai_gateway.cpp  profiling.cpp  qwen35_image_decode.mm  qwen35_image_decode_stub.cpp  qwen35_multimodal.cpp  qwen35_prefix_cache.cpp  qwen35_runtime.cpp  qwen35_vl_adapter.cpp  qwen35_weight_map.cpp  qwen_tokenizer.cpp  reasoning_parser.cpp  runtime.cpp
src/runtime/cpu/: debug_dump.cpp  debug_dump.hpp  json_scanner.cpp  json_scanner.hpp  kv_cache.cpp  kv_cache.hpp  qwen_cpu_model.cpp  qwen_cpu_model.hpp  safetensors.cpp  safetensors.hpp  tokenizer.cpp  tokenizer.hpp  tokens.hpp
tests/: smoke_test.cpp
web/: chat_page.css  chat_page.html  chat_page.js  profile_page.css  profile_page.html  profile_page.js
